--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,70 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: Poppins;
+  src: url("../assets/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+}
+
+/* On utilise thème pour paramétrer les couleurs, polices, fonts */
+@theme {
+  --font-poppins: "Poppins", sans-serif;
+  --color-primary: #ff708f;
+  --color-secondary: #f97316;
+  --color-tertiary: #fbbf24;
+}
+
+/* On utilise base pour stocker le css basique d'un élément html ( h1, nav, li, section, body ... */
+@layer base {
+  body {
+    @apply font-poppins text-[16px];
+  }
+
+  section {
+    @apply min-h-screen mb-16;
+  }
+
+  h1 {
+    @apply text-[42px] font-semibold py-[25px];
+  }
+
+  h2 {
+    @apply text-[30px] font-semibold;
+  }
+
+  h3 {
+    @apply text-[20px] font-semibold my-6;
+  }
+
+  a {
+    @apply cursor-pointer;
+  }
+}
+
+/* Components permet de stocker le css d'un composant dans une seule propriété */
+@layer components {
+  .btn-pink {
+    @apply bg-primary text-white py-2 px-6 rounded text-xs;
+  }
+
+  .btn-blue {
+    @apply bg-blue-500 text-white py-2 px-3 rounded text-xs;
+  }
+
+  .btn-red {
+    @apply bg-[#B1202E] text-white py-2 px-6 rounded text-xs;
+  }
+  .btn-green {
+    @apply bg-[#198754] text-white py-2 px-6 rounded text-xs;
+  }
+}
+
+/* Utility permet de fusionner plusieurs propriété sous une seule */
+@utility flex-center {
+  @apply flex items-center justify-center;
+}
+
+@utility flex-between {
+  @apply flex items-center justify-between;
+}
+
+/* Check JavaScript Mastery TAILWIND 4.0 course for checkbox colors, Fluid responsive texts, file inputs, Highlights, Carrets, Accordeons..  */
